# dr-offchain

./: .gitignore  README.md  pyproject.toml
data/: skybase_cowswap_mainnet_usds_acquisitions_up_to_2026-04-14.json  skybase_morpho_mainnet_usds_supplies_up_to_2026-04-14.json  skybase_psm_mainnet_usdc_to_usds_deposits_up_to_2026-04-14.json
queries/: cowswap_usds_outflows.sql  morpho_vaultv2_events.sql  morpho_vaultv2_withdraws.sql  wallet_usds_transfers.sql
src/dr_offchain/: cli.py  config.py  events.py  loader.py  pipeline.py
tests/: test_events.py  test_pipeline.py
